test/expr/bad-unexpected.txt
;;; ERROR: 1
(module (func (module)))
(;; STDERR ;;;
expr/bad-unexpected.txt:2:16: syntax error, unexpected MODULE
;;; STDERR ;;)
